Fixed ownershipDocument field